--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --team-section-background: #f5f4fa;
   --address-link-color: rgba(255, 255, 255, 60%);
   --logo-color: #afb1b8;
+  --transition-prop: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .body {
@@ -115,8 +116,7 @@ p {
   line-height: 1.1;
   text-decoration: none;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition-prop), fill var(--transition-prop);
 }
 
 .contact-icon {
@@ -344,8 +344,8 @@ p {
 
   fill: var(--logo-color);
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition-prop),
+    fill var(--transition-prop);
 }
 
 .team-item .social-link:hover,
@@ -376,8 +376,7 @@ p {
   border-color: #afb1b8;
   border-radius: 4px;
 
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill var(--transition-prop), border-color var(--transition-prop);
 }
 
 .client-box:hover,
@@ -439,7 +438,7 @@ p {
   background-color: rgba(255, 255, 255, 0.1);
   fill: var(--white-color);
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition-prop);
 }
 
 .footer-section .social-link:hover,
@@ -483,6 +482,7 @@ p {
 }
 
 .close-border {
+  padding: 0;
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -521,9 +521,8 @@ p {
   line-height: 1.6;
   cursor: pointer;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition-prop),
+    color var(--transition-prop), box-shadow var(--transition-prop);
 }
 
 .secondary-button:hover,
@@ -544,7 +543,7 @@ p {
 
   border-radius: 0px 0px 4px 4px;
 
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow var(--transition-prop);
 }
 
 .project-card:hover,
@@ -607,7 +606,7 @@ p {
   /* opacity: 0; */
 
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform var(--transition-prop);
 }
 
 .project-card:hover .card-image-text {
