--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@ p {
   content: "";
   display: block;
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 100%;
   height: 4px;
@@ -128,7 +128,6 @@ p {
 .contact-link:hover,
 .contact-link:focus {
   color: var(--accent-color);
-  fill: var(--accent-color);
 }
 
 .header-line {
@@ -271,7 +270,7 @@ p {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 70px;
+
   padding: 27px 0;
   font-size: 14px;
   font-weight: 700;
@@ -463,6 +462,7 @@ p {
 .is-hidden {
   opacity: 0;
   pointer-events: none;
+  transform: scale(0.7);
 }
 
 .modal {
@@ -486,6 +486,9 @@ p {
   width: 30px;
   height: 30px;
   border-radius: 50%;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
 
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--white-color);
@@ -602,8 +605,6 @@ p {
 
   background-color: rgba(33, 150, 243, 0.9);
   color: var(--white-color);
-
-  /* opacity: 0; */
 
   transform: translateY(100%);
   transition: transform var(--transition-prop);
