--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ p {
   line-height: 1.1;
   text-decoration: none;
 
-  transition: color var(--transition-prop), fill var(--transition-prop);
+  transition: color var(--transition-prop);
 }
 
 .contact-icon {
@@ -423,6 +423,13 @@ p {
   font-size: 14px;
   line-height: 1.7;
   text-decoration: none;
+
+  transition: color var(--transition-prop);
+}
+
+.address-link:hover,
+.address-link:focus {
+  color: var(--accent-color);
 }
 
 .address-link.map {
@@ -455,7 +462,7 @@ p {
   width: 100%;
   height: 100%;
 
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.2);
 
   transition: opacity 300ms ease-in-out;
 }
@@ -478,6 +485,7 @@ p {
   border-radius: 4px;
 
   transform: translate(-50%, -50%);
+  transition: scale var(--transition-prop);
 
   background-color: var(--white-color);
 }
