--- a/css/styles.css
+++ b/css/styles.css
@@ -265,19 +265,21 @@ p {
   display: block;
 }
 
-.work-descr {
+.work-img-over {
   position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
-
   padding: 27px 0;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.work-descr {
   font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
   text-align: center;
   text-transform: uppercase;
-  background-color: rgba(47, 48, 58, 0.8);
 
   color: var(--white-color);
 }
@@ -461,6 +463,9 @@ p {
   left: 0;
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   background-color: rgba(0, 0, 0, 0.2);
 
@@ -470,27 +475,24 @@ p {
 .is-hidden {
   opacity: 0;
   pointer-events: none;
-  transform: scale(0.7);
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
   min-width: 528px;
   min-height: 581px;
-  padding: 8px 8px 543px 490px;
+  position: relative;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-
-  transform: translate(-50%, -50%);
-  transition: scale var(--transition-prop);
-
+  transition: transform 500ms ease-in-out;
+  transform: scale(0.7);
   background-color: var(--white-color);
 }
 
 .close-border {
+  position: absolute;
+  top: 8px;
+  right: 8px;
   display: flex;
   width: 30px;
   height: 30px;
@@ -600,26 +602,27 @@ p {
   display: block;
 }
 
-.card-image-text {
+.card-over {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   padding: 63px 24px;
-
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.56;
-
   background-color: rgba(33, 150, 243, 0.9);
-  color: var(--white-color);
-
   transform: translateY(100%);
   transition: transform var(--transition-prop);
 }
 
-.project-card:hover .card-image-text {
+.card-image-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+
+  color: var(--white-color);
+}
+
+.project-card:hover .card-over {
   transform: translateY(0);
 }
 
