--- a/css/styles.css
+++ b/css/styles.css
@@ -466,15 +466,17 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-
   background-color: rgba(0, 0, 0, 0.2);
-
   transition: opacity 300ms ease-in-out;
 }
 
 .is-hidden {
   opacity: 0;
   pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: scale(0.7);
 }
 
 .modal {
@@ -484,8 +486,8 @@ p {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transition: transform 500ms ease-in-out;
-  transform: scale(0.7);
+  transition: transform 300ms ease-in-out;
+
   background-color: var(--white-color);
 }
 
